fixes code blocks not wrapping

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -128,6 +128,7 @@ footer {
 
 /***PREVIEW BOX TEXT STYLING***/
 code {
+  white-space: pre-wrap;
   background-color: $code-background;
   padding: 0 0.1em;
 }
@@ -151,7 +152,7 @@ blockquote {
   }
 }
 
-#preview {
+.preview {
   overflow-wrap: break-word; /* forces long words to wrap */
   p {
     margin-top: 0.7em;
@@ -223,7 +224,7 @@ th {
     font-size: calculateRem(11px, $basefont);
   }
 
-  #preview h1 {
+  .preview h1 {
     font-size: calculateRem(24px, $basefont);
   }
 
